--- a/src/problem5/.github/workflows/ci-cd.yml
+++ b/src/problem5/.github/workflows/ci-cd.yml
@@ -3,8 +3,12 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [ main, develop ]
+    paths:
+      - 'src/problem5/**'
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
+    paths:
+      - 'src/problem5/**'
 
 jobs:
   test:
@@ -13,6 +17,29 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x]
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: testdb
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+
+    defaults:
+      run:
+        working-directory: src/problem5
 
     steps:
     - name: Checkout code
@@ -23,6 +50,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: src/problem5/package-lock.json
 
     - name: Install dependencies
       run: npm ci
@@ -34,26 +62,90 @@ jobs:
     - name: Run linting
       run: npm run lint
 
-    - name: Run tests with coverage
-      run: npm test -- --coverage
+    - name: Run unit tests
+      run: npm run test:unit
       env:
         NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+        USE_REDIS: true
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
+        JWT_SECRET: test-jwt-secret
+
+    - name: Run integration tests
+      run: npm run test:integration
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+        USE_REDIS: true
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
+        JWT_SECRET: test-jwt-secret
+
+    - name: Run E2E tests
+      run: npm run test:e2e
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+        USE_REDIS: true
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
+        JWT_SECRET: test-jwt-secret
+
+    - name: Run tests with coverage
+      run: npm run test:coverage
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+        USE_REDIS: true
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
+        JWT_SECRET: test-jwt-secret
+
+    - name: Check coverage threshold
+      run: |
+        npx jest --coverage --coverageThreshold='{"global":{"branches":70,"functions":80,"lines":80,"statements":80}}'
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+        USE_REDIS: true
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
         JWT_SECRET: test-jwt-secret
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
-        file: ./coverage/lcov.info
-        flags: unittests
-        name: codecov-umbrella
+        file: src/problem5/coverage/lcov.info
+        flags: problem5
+        name: problem5-coverage
         fail_ci_if_error: false
 
     - name: Build application
       run: npm run build
 
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: problem5-build-files
+        path: src/problem5/dist/
+        retention-days: 7
+
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: problem5-test-results
+        path: src/problem5/coverage/
+        retention-days: 7
+
   docker:
     runs-on: ubuntu-latest
     needs: test
+
+    defaults:
+      run:
+        working-directory: src/problem5
 
     steps:
     - name: Checkout code
@@ -71,13 +163,84 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-  deploy:
+  load-test:
     runs-on: ubuntu-latest
     needs: [test, docker]
+
+    defaults:
+      run:
+        working-directory: src/problem5
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: testdb
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: src/problem5/package-lock.json
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Start application for load testing
+      run: npm run dev &
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+        USE_REDIS: true
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
+        JWT_SECRET: test-jwt-secret
+
+    - name: Wait for app to be ready
+      run: |
+        for i in {1..30}; do
+          if curl -f http://localhost:3001/health; then
+            break
+          fi
+          sleep 2
+        done
+
+    - name: Run load tests
+      run: npm run test:load:k6
+      env:
+        BASE_URL: http://localhost:3001
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test, docker, load-test]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    defaults:
+      run:
+        working-directory: src/problem5
 
     steps:
     - name: Deploy to staging
       run: |
         echo "Deployment would happen here"
         echo "This could trigger a deployment to a staging environment"
+        echo "For example: kubectl apply -f k8s/"
+        echo "Or trigger a deployment webhook"
